--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,9 +14,9 @@
     tools:context="com.bryant.garrett.myfirstbutton.MainActivity">
 
     <TextView
-        android:id="@+id/greeting_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Press Button"
         android:layout_above="@+id/new_button"
         android:layout_centerHorizontal="true" />
 
